# basic-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: test_util.h
modules/: CMakeLists.txt
src/: cpp17_test.cpp  ranges_test.cpp  stl_algorithms_test.cpp  toml_test.cpp
src/books/concurrency_with_modern_cpp/: sum_of_vector.cpp
src/books/concurrency_with_modern_cpp/concurrent_architecture/: active_object.cpp  monitor_object.cpp
src/books/concurrency_with_modern_cpp/memory_model/: atomic.cpp  atomic_flag.cpp  fence.cpp  memory_order_acquire_release.cpp  memory_order_consume_release.cpp  memory_order_relaxed.cpp  memory_order_sequential_consistency.cpp
src/books/concurrency_with_modern_cpp/multithreading/: condition_variable.cpp  lock.cpp  mutex.cpp  task.cpp  thread.cpp  thread_local.cpp  thread_safe_initialisation.cpp
src/books/concurrency_with_modern_cpp/parallel_stl/: parallel_stl.cpp
src/books/concurrency_with_modern_cpp/synchronisation_patterns/: scoped_lock.cpp  strategized_lock.cpp  thread_safe_interface.cpp
src/boost/: boost_intrusive_test.cpp
src/libs/stl/: cpp11_concurrency_test.cpp  cpp17_test.cpp  stl_algorithms_test.cpp
src/sites/geeksforgeeks/: data_structures_test.cpp
src/sites/geeksforgeeks/algorithms/: back_tracking_test.cpp  bfs_test.cpp  binary_search_test.cpp  dfs_test.cpp  two_pointers_test.cpp
src/sites/geeksforgeeks/data_structures/: array_test.cpp  binary_tree_test.cpp  circular_linked_list_test.cpp  doubly_linked_list_test.cpp  singly_linked_list_test.cpp
src/sites/leetcode/: random_test.cpp
src/sites/leetcode/algorithms/: bfs_test.cpp  binary_search_test.cpp  two_pointers_test.cpp
src/sites/leetcode/data_structures/: hash_test.cpp  heap_test.cpp  linked_list_test.cpp
src/sites/refactoring_guru/behavioral/: chain_of_responsibility.cpp  command.cpp  iterator.cpp  mediator.cpp  memento.cpp  observer.cpp  state.cpp  strategy.cpp  template_method.cpp  visitor.cpp
src/sites/refactoring_guru/creational/: abstract_factory.cpp  builder.cpp  factory_method.cpp  prototype.cpp  singleton.cpp
src/sites/refactoring_guru/structural/: adapter.cpp  bridge.cpp  composite.cpp  decorator.cpp  facade.cpp  flyweight.cpp  proxy.cpp
src/stl/: cpp17_test.cpp
src/techniques/tmp/: from_modern_cpp_design.cpp
test/toml/: array_table.toml  nested_table.toml  table.toml
